Configured google provider

--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://root:Bbmajor7th@localhost:3306/issue-tracker"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="vshbdjvarjunsdvbsvbs"
+GOOGLE_CLIENT_ID="484242348487-5n0a3q0drfuffcc6ldi41h9ciqg2qh9v.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
