New breakpoints added

--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://jy5kutegtzmwdfbl6426:pscale_pw_N3UL5EvNAb86D0o18RqLpwQL9xnJ2Z1JDKkjPWNBTPg@aws.connect.psdb.cloud/bug-tracker?sslaccept=strict"
+DATABASE_URL='mysql://2vuxlx8nqvlctr58qq0r:pscale_pw_7otHhnaheOR7jMhTzFpeE4nx3lImHztCJFy3d3c7xpg@aws.connect.psdb.cloud/bug-tracker?sslaccept=strict'
 NEXTAUTH_URL="https://bug-tracker-coral.vercel.app"
 NEXTAUTH_SECRET="vshbdjvarjunsdvbsvbs"
 GOOGLE_CLIENT_ID="484242348487-5n0a3q0drfuffcc6ldi41h9ciqg2qh9v.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
+
